Добавила стили в css

--- a/less/blocks/map-officer.less
+++ b/less/blocks/map-officer.less
@@ -1,1 +1,25 @@
+.map-officer .navbar{
+  padding: 10px;
+}
 
+.map-officer .glyphicon-user:before {
+  font-size: 40px;
+}
+
+.map-officer .glyphicon-user{
+  margin-top: 10px;
+}
+
+.map-officer .glyphicon-globe{
+  width: 100%;
+  margin-bottom: 30px;
+}
+
+.map-officer .btn{
+  padding: 3px 12px;
+  margin: 0 9px;
+}
+
+.map-officer .position{
+  background: #f16938;
+}
