Немного поправила шапку

--- a/less/blocks/nav-menu.less
+++ b/less/blocks/nav-menu.less
@@ -3,6 +3,23 @@ nav{
   background: #00AA00;
 }
 
+.icon-search{
+  background: #f1f1f1;
+  border-radius: 5px;
+  margin-left: 17px;
+  height: 36px;
+  margin-top: 5px;
+  padding: 10px 10px;
+}
+
+.navbar-header a{
+  color: #000000;
+}
+
+.navbar-header a:active{
+  color: #afb1b0;
+}
+
 .btn-group>.btn:first-child {
   margin-top: 6px;
 }
@@ -31,10 +48,22 @@ nav{
 
 /*Поле поиска выпадающего*/
 
-.search-field .glyphicon-search{
+.form-menu{
+
+}
+
+.form-menu a{
+  display: block;
+  background: #f1bca2;
+  padding: 7px 0 7px 0;
+  text-align: center;
+}
+
+.form-search .glyphicon-search{
+  width: 125px;
   padding: 10px;
 }
 
-.search-field .glyphicon-search:before {
-  padding-right: 8px;
+.form-search .glyphicon-search:before {
+  padding-right: 10px;
 }
