Уменьшила личные карты работников

--- a/less/blocks/map-officer.less
+++ b/less/blocks/map-officer.less
@@ -1,13 +1,34 @@
+.map-officer{
+  font-size: 12px;
+}
+
 .map-officer .navbar{
   padding: 10px;
 }
 
-.map-officer .glyphicon-user:before {
-  font-size: 40px;
+.map-officer .position{
+  padding-top: 10px;
+  background: #f16938;
+  margin-bottom: 10px;
+}
+
+.position{
+  display: inline-block;
+  vertical-align: top;
+}
+
+.map-officer .glyphicon-user:before{
+  font-size: 25px;
 }
 
 .map-officer .glyphicon-user{
   margin-top: 10px;
+  margin-left: 3px;
+}
+
+.text{
+  width: 125px;
+  margin-left: 15px;
 }
 
 .map-officer .glyphicon-globe{
@@ -16,10 +37,12 @@
 }
 
 .map-officer .btn{
-  padding: 3px 12px;
-  margin: 0 9px;
+  padding: 3px 10px;
+  font-size: 11px;
 }
 
-.map-officer .position{
-  background: #f16938;
+.map-officer .btn-danger{
+  margin-right: 10px;
 }
+
+
