--- a/less/blocks/nav-menu.less
+++ b/less/blocks/nav-menu.less
@@ -1,5 +1,6 @@
 nav{
-  display: inline;
+  display: inline-block;
+  vertical-align: top;
   background: #00AA00;
 }
 
@@ -12,7 +13,7 @@ nav{
   padding: 10px 10px;
 }
 
-.navbar-header a{
+.glyphicon-align-justify{
   color: #000000;
 }
 
