--- a/less/blocks/table.less
+++ b/less/blocks/table.less
@@ -1,25 +1,114 @@
-.navbar-inverse {
-  color: #FFFFFF;
+
+
+.header div,
+.table-row div,
+.table-inner-1 div,
+.table-inner-2 div{
+  display: inline-block;
+  vertical-align: top;
+  padding:7px  10px;
+  margin-right: -5px;
 }
 
-.navbar-inverse th{
+.header div{
+  background: #000000;
+  border: 1px solid #ffffff;
+  color: #ffffff;
   text-align: center;
 }
 
-.shadow{
-  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.18);
+.header div:nth-child(1),
+.table-row div:nth-child(1){
+  width: 250px;
 }
 
-.table-inner{
-  width: 750px;
-  margin-top: -20px;
+.header div:nth-child(2),
+.header div:nth-child(3),
+.header div:nth-child(5),
+.table-row div:nth-child(2),
+.table-row div:nth-child(3),
+.table-row div:nth-child(6),
+.table-inner-1 div:nth-child(2),
+.table-inner-1 div:nth-child(3),
+.table-inner-1 div:nth-child(6){
+  width: 105px;
 }
 
-.cell-name{
-  width: 243px;
+.header div:nth-child(4){
+  width: 200px;
 }
 
-th{
-  width: auto;
-  font-size: 13px;
+
+.table-row{
+  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.349);
 }
+
+.table-row div:nth-child(4),
+.table-row div:nth-child(5),
+.table-inner-1 div:nth-child(4),
+.table-inner-1 div:nth-child(5){
+  width: 100px;
+}
+
+.table:last-of-type .table-inner-1{
+  background: #c6c6c6;
+  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.349);
+}
+
+
+.table-row div,
+.table-inner-1 div,
+.table-inner-2 div{
+  border: 1px solid #d8d8d8;
+}
+
+.table-inner-2{
+  text-align: center;
+}
+
+
+.table-inner-1 div:nth-child(1){
+  width: 240px;
+}
+
+.table-inner-1{
+  margin-left: 10px;
+}
+
+
+
+.table-inner-2 div:nth-child(1),
+.total div:nth-child(1){
+  width: 50px;
+  margin-left: 20px;
+}
+
+.table-inner-2 div:nth-child(2){
+  width: 249px;
+}
+
+.table-inner-2 div:nth-child(3){
+  width: 200px;
+}
+
+.table-inner-2 div:nth-child(4),
+.table-inner-2 div:nth-child(5){
+  width: 120px;
+}
+
+.total div:nth-child(1){
+  width: 685px;
+  text-align: right;
+  background: #e2e2e2;
+}
+
+.total div:nth-child(2){
+  width: 50px;
+  background: #e2e2e2;
+}
+
+
+
+
+
+
