--- a/less/reset.less
+++ b/less/reset.less
@@ -7,7 +7,7 @@
   text-decoration: none;
 }
 
-/*article, aside, details, figcaption, figure,
+article, aside, details, figcaption, figure,
 footer, header, menu, nav, section, div{
   display: block;
 }
@@ -19,7 +19,7 @@ body {
 table {
   border-collapse: collapse;
   border-spacing: 0;
-}*/
+}
 
 li {
   list-style-type: none;
