--- a/less/style.less
+++ b/less/style.less
@@ -1,5 +1,7 @@
 @import "reset.less";
 @import "mixins.less";
+@import "global.less";
 @import "blocks/nav-menu.less";
 @import "blocks/table.less";
 @import "blocks/map-officer";
+@import "blocks/footer.less";
